@@ -3,6 +3,7 @@
 #ifndef LUA_CONTEXT_DATA_H
 #define LUA_CONTEXT_DATA_H
 
+#include "Lua/LuaAllocState.h"
 #include "LuaMemPool.h"
 #if (!defined(UNITSYNC) && !defined(DEDICATED))
 #include "LuaShaders.h"
@@ -11,6 +12,7 @@
 #include "LuaRBOs.h"
 #include "LuaDisplayLists.h"
 #endif
+
 #include "System/EventClient.h"
 #include "System/Log/ILog.h"
 #include "System/Threading/SpringThreading.h"
@@ -41,6 +43,7 @@ public:
 	, readAllyTeam(0)
 	, selectTeam(CEventClient::NoAccessTeam)
 
+	, allocState{{0}, {0}, {0}, {0}}
 	{}
 
 	~luaContextData() {
@@ -91,6 +94,8 @@ public:
 	int readTeam;
 	int readAllyTeam;
 	int selectTeam;
+
+	SLuaAllocState allocState;
 
 #if (!defined(UNITSYNC) && !defined(DEDICATED))
 	// NOTE:
